# mcp-dotnet-context

./: .gitignore  CHANGELOG.md  Cargo.toml  HONEST_ASSESSMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md
.github/workflows/: security-audit.yml
data/patterns/: blazor-server-data-apis.json  blazor-server-di.json  blazor-server-jsinterop.json  blazor-server-lifecycle-advanced.json  blazor-server-lifecycle.json  blazor-server-patterns.json  blazor-server-performance.json  blazor-server-security.json  blazor-server-state.json
docs/: CAMBIOS_ESTRUCTURA.md  CLAUDE.md  CrearUnMcpConRust.md  MCP_SETUP_GUIDE.en.md  MCP_SETUP_GUIDE.md  PATTERNS_CATALOG.md  PHASE2_SUMMARY.md  README.md  RESUMEN_GITHUB.txt  SECURITY_AUDIT.md  USAGE_EXAMPLES.en.md  USAGE_EXAMPLES.md  VERIFICATION_REPORT.md  claude_desktop_config.json
src/: config.rs  lib.rs  main.rs  types.rs
src/analyzer/: csharp.rs  detector.rs  generic.rs  mod.rs  project.rs
src/context/: mod.rs
src/mcp/: mod.rs
src/training/: mod.rs
src/utils/: mod.rs
tests/: test_analyzer.rs  test_training.rs
