[package]
name = "mcp-dotnet-context"
version = "0.1.0"
edition = "2021"
authors = ["MCP .NET Context Contributors"]
description = "Experimental MCP server for .NET & Blazor Server - Context reinforcement and pattern training research (not for production)"
license = "MIT"
repository = "https://github.com/scopweb/mcp-dotnet-context"
homepage = "https://github.com/scopweb/mcp-dotnet-context"
documentation = "https://github.com/scopweb/mcp-dotnet-context#readme"
readme = "README.md"
keywords = ["mcp", "dotnet", "blazor", "experimental", "research"]
categories = ["development-tools", "parsing", "api-bindings"]
publish = false  # Not published to crates.io (experimental project)

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Code parsing
tree-sitter = "0.20"
tree-sitter-c-sharp = "0.20"

# XML parsing (for .csproj files)
quick-xml = { version = "0.31", features = ["serialize"] }

# File system operations
walkdir = "2.4"
globset = "0.4"
ignore = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Utilities
regex = "1.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
